# KIV

./: .gitignore  KIV-RESULTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
kiv/: __init__.py  cold_store.py  config.py  eval_harness.py  eval_utils.py  hf_topology.py  mask_utils.py  middleware.py  model_topology.py  partitioned_attn.py  tiered_cache.py
kiv/server/: __init__.py  app.py  cli.py  generation.py  model_loader.py  schemas.py  session.py
kiv/vllm/: __init__.py  attention_hook.py  connector.py  topology.py
scripts/: _helpers.py  adversarial.py  bounded_prefill_test.py  debug_decode_scaling.py  debug_prefill_regression.py  decode_profile.py  find_p_floor.py  instrument_kv.py  multi_model_test.py  needle_grid.py  profile_decode.py  retrieval_diag.py  run_eval.py  scaling_profile.py  smoke_ollama_server.py
tests/: test_cache.py  test_eval_utils.py  test_middleware.py  test_model_topology.py  test_server_app.py  test_server_session.py  test_vllm_attention_hook.py  test_vllm_connector.py  test_vllm_topology.py
