[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiv"
version = "0.2.0"
description = "K-Indexed V Materialization — extend LLM context to 1M+ tokens on a consumer GPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Babyhamsta" },
]
keywords = ["transformers", "vllm", "kv-cache", "long-context", "attention", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
]

[project.optional-dependencies]
hf = [
    "transformers>=5.5.0",
]
vllm = [
    "vllm>=0.11.0",
]
quantization = [
    "bitsandbytes>=0.43.0",
    "accelerate>=0.25.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
]
test = [
    "pytest>=7.0.0",
    "datasets>=2.14.0",
    "httpx>=0.26.0",
]
all = [
    "kiv[hf,quantization,server,test]",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.scripts]
kiv = "kiv.server.cli:main"

[project.urls]
Repository = "https://github.com/Babyhamsta/KIV"

[tool.setuptools.packages.find]
include = ["kiv*"]
exclude = ["scripts*", "tests*", "outputs*", "kv_analysis*", "gla_archive*"]
